--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   height: 100%;
   font-family: "Google Sans", Roboto, Arial, sans-serif;
-  background-image: url("src/WhatsApp Image 2025-10-05 at 13.01.32_6fa9c401.jpg");
+  background-image: url("img1.jpg");
   background-size: cover; /* Make it cover the screen */
   background-repeat: no-repeat;
   background-position: center;
